# Duffy_Nodes

./: .gitignore  CHANGELOG.md  ComfyUI Nodes 2.0 Styling Guide.md  ComfyUI_Image_Manipulation_Node_Creation.md  ComfyUI_Nodes_2.0_V3_Komplexitaet.md  Custom Node für Workflow-Metadaten-Export.md  GEMINI.md  LICENSE  Model_Selector_Node.md  Node_Sampler_Scheduler.md  Nodes_2.0_Guide.md  README.md  __init__.py  error.txt  image_preview_error.md  package-lock.json  package.json  pyproject.toml  requirements.txt  vite.config.ts
.gemini/: settings.json
.github/: copilot-instructions.md
core/: __init__.py
docs/: ComfyUI Node Image Cropping PRD.md  ComfyUI_Ideogram_Node_Concept.md  Dynamic ComfyUI Node Outputs.md  llm_node_setup.md  sigma_editor.md
error_handling/: v1_context_menu_fix.md
nodes/: __init__.py  adaptive_resolution_latent.py  advanced_connected_image_stitch.py  advanced_folder_image_selector.py  advanced_image_adjuster.py  advanced_layer_control.py  advanced_text_overlay.py  audio_duration.py  audio_slicer.py  clip_loader.py  connected_image_stitch.py  directory_image_iterator.py  duffy_sam3_mask_editor.py  dynamic_float.py  dynamic_integer.py  dynamic_multi_architecture_sampler.py  empty_qwen_latent.py  find_and_replace_text.py  five_float_sliders.py  five_int_sliders.py  float_math.py  flux2_klein_noise.py  flux_max_shift.py  gemma_4_12b_analyzer.py  gemma_ideogram_spatial_architect.py  image_adjuster.py  image_compare.py  image_preview.py  image_stitch.py  image_styler.py  image_text_overlay.py  integer_math.py  interactive_relight.py  logic_gate.py  (+36 more)
(+133 files in other folders)
